// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardLayout > renders consistently (snapshot) 1`] = `
<div
  class="min-h-screen bg-gray-50 dark:bg-gray-900 flex"
>
  <aside
    aria-label="Main navigation"
    class="fixed inset-y-0 left-0 z-40 flex flex-col bg-white dark:bg-gray-800 border-r border-gray-200 dark:border-gray-700 transition-all duration-300 ease-in-out lg:static lg:inset-auto lg:block -translate-x-full lg:translate-x-0 lg:shadow-none w-64 lg:w-64"
  >
    <div
      class="flex h-16 items-center justify-between px-4 border-b border-gray-200 dark:border-gray-700"
    >
      <div
        class="flex items-center"
      >
        <div
          class="h-8 w-8 rounded bg-blue-600 flex items-center justify-center flex-shrink-0"
        >
          <span
            class="text-white font-bold text-sm"
          >
            D
          </span>
        </div>
        <span
          class="ml-2 text-lg font-semibold text-gray-900 dark:text-white whitespace-nowrap"
        >
          Dashboard
        </span>
      </div>
      <button
        aria-label="Close sidebar"
        class="lg:hidden p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18 18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
    <nav
      class="flex-1 px-4 py-4 space-y-2 overflow-y-auto"
    >
      <button
        aria-current="page"
        class="w-full flex items-center px-3 py-2 text-sm font-medium rounded-lg transition-all duration-200 justify-start bg-blue-50 dark:bg-blue-900/20 text-blue-700 dark:text-blue-300 border border-blue-200 dark:border-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 flex-shrink-0 text-blue-600 dark:text-blue-400"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="ml-3 whitespace-nowrap"
        >
          Dashboard
        </span>
      </button>
      <button
        class="w-full flex items-center px-3 py-2 text-sm font-medium rounded-lg transition-all duration-200 justify-start text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 hover:text-gray-900 dark:hover:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 flex-shrink-0 text-gray-500 dark:text-gray-400 group-hover:text-gray-700 dark:group-hover:text-gray-300"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75ZM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625ZM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="ml-3 whitespace-nowrap"
        >
          Analytics
        </span>
      </button>
      <button
        class="w-full flex items-center px-3 py-2 text-sm font-medium rounded-lg transition-all duration-200 justify-start text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 hover:text-gray-900 dark:hover:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 flex-shrink-0 text-gray-500 dark:text-gray-400 group-hover:text-gray-700 dark:group-hover:text-gray-300"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12a7.5 7.5 0 0 0 15 0m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m16.5 0H21m-1.5 0H12m-8.457 3.077 1.41-.513m14.095-5.13 1.41-.513M5.106 17.785l1.15-.964m11.49-9.642 1.149-.964M7.501 19.795l.75-1.3m7.5-12.99.75-1.3m-6.063 16.658.26-1.477m2.605-14.772.26-1.477m0 17.726-.26-1.477M10.698 4.614l-.26-1.477M16.5 19.794l-.75-1.299M7.5 4.205 12 12m6.894 5.785-1.149-.964M6.256 7.178l-1.15-.964m15.352 8.864-1.41-.513M4.954 9.435l-1.41-.514M12.002 12l-3.75 6.495"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="ml-3 whitespace-nowrap"
        >
          Settings
        </span>
      </button>
    </nav>
    <div
      class="hidden lg:flex p-4 border-t border-gray-200 dark:border-gray-700"
    >
      <button
        aria-label="Collapse sidebar"
        class="w-full p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 transition-transform duration-200"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.75 19.5 8.25 12l7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
  </aside>
  <div
    class="flex flex-col min-h-screen transition-all duration-300 ml-0 lg:ml-64 w-full"
  >
    <header
      class="sticky top-0 z-50 flex h-16 items-center justify-between bg-gray-800 dark:bg-gray-900 border-b border-gray-700 dark:border-gray-600 px-4 lg:px-6"
    >
      <div
        class="flex items-center space-x-4"
      >
        <button
          aria-label="Open sidebar"
          class="lg:hidden p-2 rounded-md transition-colors duration-200 text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        <h1
          class="text-xl font-semibold text-white lg:text-2xl"
        >
          Dashboard
        </h1>
      </div>
      <div
        class="flex items-center space-x-2 lg:space-x-4"
      >
        <button
          aria-label="Toggle theme"
          class="
        inline-flex items-center justify-center rounded-md p-2
        text-gray-300 hover:text-white hover:bg-gray-700
        transition-colors duration-200
        focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
        focus:ring-offset-gray-800
        hidden sm:flex
      "
          title="Current theme: System"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17.25v1.007a3 3 0 0 1-.879 2.122L7.5 21h9l-.621-.621A3 3 0 0 1 15 18.257V17.25m6-12V15a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 15V5.25m18 0A2.25 2.25 0 0 0 18.75 3H5.25A2.25 2.25 0 0 0 3 5.25m18 0V12a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 12V5.25"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        <div
          class="relative"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="flex items-center space-x-2 rounded-md p-2 text-sm transition-colors duration-200 text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
            data-headlessui-state=""
            id="headlessui-menu-button-_r_1l_"
            type="button"
          >
            <div
              class="flex-shrink-0"
            >
              <div
                class="h-8 w-8 rounded-full bg-blue-600 flex items-center justify-center"
              >
                <span
                  class="text-white text-sm font-medium"
                >
                  JD
                </span>
              </div>
            </div>
            <div
              class="hidden sm:block text-left"
            >
              <p
                class="text-sm font-medium text-white truncate max-w-32"
              >
                John Doe
              </p>
              <p
                class="text-xs text-gray-300 truncate max-w-32"
              >
                john.doe@example.com
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="h-4 w-4 transition-transform duration-200"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m19.5 8.25-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="flex-1 p-4 lg:p-6"
    >
      <div
        class="mx-auto "
      >
        <div>
          Snapshot Content
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`DashboardLayout > renders consistently with different content (snapshot) > dashboard-layout-complex 1`] = `
<div
  class="min-h-screen bg-gray-50 dark:bg-gray-900 flex"
>
  <aside
    aria-label="Main navigation"
    class="fixed inset-y-0 left-0 z-40 flex flex-col bg-white dark:bg-gray-800 border-r border-gray-200 dark:border-gray-700 transition-all duration-300 ease-in-out lg:static lg:inset-auto lg:block -translate-x-full lg:translate-x-0 lg:shadow-none w-64 lg:w-64"
  >
    <div
      class="flex h-16 items-center justify-between px-4 border-b border-gray-200 dark:border-gray-700"
    >
      <div
        class="flex items-center"
      >
        <div
          class="h-8 w-8 rounded bg-blue-600 flex items-center justify-center flex-shrink-0"
        >
          <span
            class="text-white font-bold text-sm"
          >
            D
          </span>
        </div>
        <span
          class="ml-2 text-lg font-semibold text-gray-900 dark:text-white whitespace-nowrap"
        >
          Dashboard
        </span>
      </div>
      <button
        aria-label="Close sidebar"
        class="lg:hidden p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18 18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
    <nav
      class="flex-1 px-4 py-4 space-y-2 overflow-y-auto"
    >
      <button
        aria-current="page"
        class="w-full flex items-center px-3 py-2 text-sm font-medium rounded-lg transition-all duration-200 justify-start bg-blue-50 dark:bg-blue-900/20 text-blue-700 dark:text-blue-300 border border-blue-200 dark:border-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 flex-shrink-0 text-blue-600 dark:text-blue-400"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="ml-3 whitespace-nowrap"
        >
          Dashboard
        </span>
      </button>
      <button
        class="w-full flex items-center px-3 py-2 text-sm font-medium rounded-lg transition-all duration-200 justify-start text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 hover:text-gray-900 dark:hover:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 flex-shrink-0 text-gray-500 dark:text-gray-400 group-hover:text-gray-700 dark:group-hover:text-gray-300"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75ZM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625ZM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="ml-3 whitespace-nowrap"
        >
          Analytics
        </span>
      </button>
      <button
        class="w-full flex items-center px-3 py-2 text-sm font-medium rounded-lg transition-all duration-200 justify-start text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 hover:text-gray-900 dark:hover:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 flex-shrink-0 text-gray-500 dark:text-gray-400 group-hover:text-gray-700 dark:group-hover:text-gray-300"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12a7.5 7.5 0 0 0 15 0m-15 0a7.5 7.5 0 1 1 15 0m-15 0H3m16.5 0H21m-1.5 0H12m-8.457 3.077 1.41-.513m14.095-5.13 1.41-.513M5.106 17.785l1.15-.964m11.49-9.642 1.149-.964M7.501 19.795l.75-1.3m7.5-12.99.75-1.3m-6.063 16.658.26-1.477m2.605-14.772.26-1.477m0 17.726-.26-1.477M10.698 4.614l-.26-1.477M16.5 19.794l-.75-1.299M7.5 4.205 12 12m6.894 5.785-1.149-.964M6.256 7.178l-1.15-.964m15.352 8.864-1.41-.513M4.954 9.435l-1.41-.514M12.002 12l-3.75 6.495"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        <span
          class="ml-3 whitespace-nowrap"
        >
          Settings
        </span>
      </button>
    </nav>
    <div
      class="hidden lg:flex p-4 border-t border-gray-200 dark:border-gray-700"
    >
      <button
        aria-label="Collapse sidebar"
        class="w-full p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 dark:focus:ring-offset-gray-800"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 transition-transform duration-200"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.75 19.5 8.25 12l7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
  </aside>
  <div
    class="flex flex-col min-h-screen transition-all duration-300 ml-0 lg:ml-64 w-full"
  >
    <header
      class="sticky top-0 z-50 flex h-16 items-center justify-between bg-gray-800 dark:bg-gray-900 border-b border-gray-700 dark:border-gray-600 px-4 lg:px-6"
    >
      <div
        class="flex items-center space-x-4"
      >
        <button
          aria-label="Open sidebar"
          class="lg:hidden p-2 rounded-md transition-colors duration-200 text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        <h1
          class="text-xl font-semibold text-white lg:text-2xl"
        >
          Dashboard
        </h1>
      </div>
      <div
        class="flex items-center space-x-2 lg:space-x-4"
      >
        <button
          aria-label="Toggle theme"
          class="
        inline-flex items-center justify-center rounded-md p-2
        text-gray-300 hover:text-white hover:bg-gray-700
        transition-colors duration-200
        focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2
        focus:ring-offset-gray-800
        hidden sm:flex
      "
          title="Current theme: System"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17.25v1.007a3 3 0 0 1-.879 2.122L7.5 21h9l-.621-.621A3 3 0 0 1 15 18.257V17.25m6-12V15a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 15V5.25m18 0A2.25 2.25 0 0 0 18.75 3H5.25A2.25 2.25 0 0 0 3 5.25m18 0V12a2.25 2.25 0 0 1-2.25 2.25H5.25A2.25 2.25 0 0 1 3 12V5.25"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        <div
          class="relative"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="flex items-center space-x-2 rounded-md p-2 text-sm transition-colors duration-200 text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
            data-headlessui-state=""
            id="headlessui-menu-button-_r_1o_"
            type="button"
          >
            <div
              class="flex-shrink-0"
            >
              <div
                class="h-8 w-8 rounded-full bg-blue-600 flex items-center justify-center"
              >
                <span
                  class="text-white text-sm font-medium"
                >
                  JD
                </span>
              </div>
            </div>
            <div
              class="hidden sm:block text-left"
            >
              <p
                class="text-sm font-medium text-white truncate max-w-32"
              >
                John Doe
              </p>
              <p
                class="text-xs text-gray-300 truncate max-w-32"
              >
                john.doe@example.com
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="h-4 w-4 transition-transform duration-200"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m19.5 8.25-7.5 7.5-7.5-7.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </header>
    <main
      class="flex-1 p-4 lg:p-6"
    >
      <div
        class="mx-auto "
      >
        <div>
          <h1>
            Complex Content
          </h1>
          <p>
            Multiple elements
          </p>
          <button>
            Interactive
          </button>
        </div>
      </div>
    </main>
  </div>
</div>
`;
